Change tournament card

--- a/app/components/PageHead/PageHead.module.scss
+++ b/app/components/PageHead/PageHead.module.scss
@@ -6,7 +6,7 @@
   width: 100%;
   height: 59px;
   min-height: 59px;
-  background-color: #190A31;
+  background-color: #242424;
   border-bottom-right-radius: 12px;
   border-bottom-left-radius: 12px;
   border-bottom: 2.5px solid #8C8498;
