--- a/app/components/TournamentsList/TournamentListCard/TournamentListCard.module.scss
+++ b/app/components/TournamentsList/TournamentListCard/TournamentListCard.module.scss
@@ -1,22 +1,43 @@
+.tournamentListCardContainer {
+  position: relative;
+}
+
 .tournamentListCard {
   position: relative;
-  width: 100%;
-  padding: 46px 16px 16px;
-  border: 1px solid #8C8498;
-  background-color: #08042D;
-  border-radius: 12px;
   overflow: hidden;
+  width: 100%;
+  padding: 46px 24px 16px 10px;
+  background-color: #ffffff;
+  border-radius: 12px;
 
+  gap: 0px;
+  border-radius: 12px 12px 12px 12px;
+  opacity: 0px;
+  clip-path: polygon(0% 14%, 12% 0, 100% 0%, 100% 85%, 92% 100%, 0% 100%, 0% 79%, 7% 70%, 7% 37%, 0% 28%);
+  background: linear-gradient(90deg, #F3E7E9 0%, #E3EEFF 99%, #E3EEFF 100%);
+  z-index: -1;
   & * {
     z-index: 1;
   }
 }
 
+.playButtonContainer {
+  display: flex;
+  justify-content: end;
+  padding-bottom: 20px;
+}
+
+.tournamentCardBackground {
+  position: absolute;
+  top: 0%; 
+  left: 0%;
+}
+
 .tournamentAvailabilityInfo {
   position: absolute;
-  top: 16px;
-  left: 16px;
-  right: 16px;
+  top: 0px;
+  left: 46px;
+  right: 36px;
 }
 
 .titleWithParticipantsContainer {
@@ -25,7 +46,8 @@
   row-gap: 4px;
   width: calc(100% - 104px);
   min-height: 94px;
-  margin-top: 24px;
+  margin-top: 44px;
+  padding-left: 30px;
 }
 
 .tournamentPrizeInfo {
@@ -33,28 +55,37 @@
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
+  padding-left: 30px;
   margin-bottom: 16px;
 }
 
 .tournamentImage {
-  width: 94px;
-  height: 94px;
+  width: 80px;
+  height: 80px;
   position: absolute;
-  top: 64px;
+  top: 25%;
   right: 24px;
   z-index: 2;
 }
 
-.tournamentImageShadow {
+.tournamentTicketFragment {
   position: absolute;
-  top: 74px;
-  right: 46px;
-  width: 72px;
-  height: 72px;
-  z-index: 0;
-  background: rgba(0, 0, 0, 0.25);
-  border-radius: 50%;
-  box-shadow: 0 0 100px 50px #3a1f66;
+  z-index: 999;
+  top: 31%;
+  left: -3%;
+  z-index: 9999;
+}
+
+.tournamentImageShadow {
+  // position: absolute;
+  // top: 74px;
+  // right: 46px;
+  // width: 72px;
+  // height: 72px;
+  // z-index: 0;
+  // // background: rgba(0, 0, 0, 0.25);
+  // border-radius: 50%;
+  // // box-shadow: 0 0 100px 50px #3a1f66;
 }
 
 .viewDetailsButton {
