--- a/app/components/Typography/Typography.module.scss
+++ b/app/components/Typography/Typography.module.scss
@@ -7,7 +7,7 @@
 }
 
 .color-gray {
-  color: #8C8498;
+  color: #FFFFFF;
 }
 
 .color-yellow {
@@ -52,7 +52,7 @@
 
 .variant-h1 {
   font-size: 1.5rem;
-  font-weight: 700;
+  font-weight: 900;
 }
 
 .variant-h2 {
