--- a/app/components/Button/Button.module.scss
+++ b/app/components/Button/Button.module.scss
@@ -3,20 +3,18 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  background: linear-gradient(111.04deg, #2CD8D5 0%, #6B8DD6 47.26%, #8E37D7 98.45%);
+  width: 120px;
+  background: linear-gradient(90deg, #E6B980 0%, #EACDA3 100%);
   border: none;
-  box-shadow: 0 4px 16px 0 #8B46AB66;
-  border-radius: 12px;
-  color: #FFFFFF;
-  padding: 4px 10px;
+  border-radius: 4px;
+  color:  #0B0B0B;
+  padding: 10px 16px;
   cursor: pointer;
   outline: 0;
-  min-height: 33px;
-  font-size: 0.75rem;
-  font-weight: 500;
+  min-height: 48px;
+  font-size: 1.25rem;
+  font-weight: 700;
   box-sizing: border-box;
-  text-transform: uppercase;
   -webkit-tap-highlight-color: transparent;
 
   &:not(:disabled):hover {
@@ -48,7 +46,7 @@
   right: 1px;
   bottom: 1px;
   left: 1px;
-  background: linear-gradient(90.82deg, #3E7D7F 0.53%, #565F7F 48.02%, #614380 99.47%);
+  background: linear-gradient(90deg, #E6B980 0%, #EACDA3 100%);
   border-radius: 12px;
 }
 
@@ -59,7 +57,8 @@
   left: 0;
   width: 0;
   height: 100%;
-  background: linear-gradient(111.04deg, #2CD8D5 0%, #6B8DD6 47.26%, #8E37D7 98.45%);
+  background: linear-gradient(90deg, #E6B980 0%, #EACDA3 100%);
+
   transition: width 0.4s ease;
   border-radius: 12px;
   z-index: 0;
