--- a/app/components/Layouts/PageLayout/PageLayout.module.scss
+++ b/app/components/Layouts/PageLayout/PageLayout.module.scss
@@ -9,6 +9,7 @@
   background-size: cover;
   background-attachment: fixed;
   overflow: auto;
+  background-color: #0B0B0B;
 }
 
 .pageLayoutWithOverlay::before {
@@ -18,7 +19,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #07032BCC;
+  background-color: #0B0B0B;
   z-index: 0;
 }
 
