--- a/app/components/MenuTabBar/MenuTabBar.module.scss
+++ b/app/components/MenuTabBar/MenuTabBar.module.scss
@@ -6,8 +6,8 @@
   height: 77px;
   min-height: 77px;
   padding: 0 8px;
-  background: #2E0B67CC;
-  border-top: 1px solid #8C8498;
+  background: #242424;
+  border-top: 1px solid #FFFFFF;
 }
 
 .menuSection {
@@ -23,7 +23,7 @@
   & > svg {
     width: 24px;
     height: 24px;
-    stroke: #8C8498;
+    stroke: #FFFFFF;
   }
 
   &::after {
@@ -33,17 +33,17 @@
     top: -12px;
     width: 100%;
     height: 1px;
-    background: #2CD8D5;
+    background: #FFFFFF;
   }
 }
 
 .selectedMenuSection {
   & > .menuSectionTitle {
-    color: #2CD8D5;
+    color: #F7D6A3;
   }
 
   & > svg {
-    stroke: #2CD8D5;
+    stroke: #F7D6A3;
   }
 
   &::after {
