Add detailed tournament view, start working on leaderboard

--- a/app/components/Typography/Typography.module.scss
+++ b/app/components/Typography/Typography.module.scss
@@ -3,11 +3,11 @@
 }
 
 .color-secondary {
-  color: #439CB5;
+  color: #F7D6A3;
 }
 
 .color-gray {
-  color: #FFFFFF;
+  color: #8C8498;
 }
 
 .color-yellow {
@@ -24,18 +24,6 @@
 
 .color-black {
   color: #000000;
-}
-
-.color-gradient1 {
-  background: linear-gradient(to right, #2CD8D5 0%, #6B8DD6 48%, #8E37D7 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-.color-gradient2 {
-  background: linear-gradient(to right, #2CD8D5 80%, #6B8DD6 85%, #8E37D7 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
 }
 
 .alignment-left {
