--- a/app/components/Button/Button.module.scss
+++ b/app/components/Button/Button.module.scss
@@ -3,24 +3,22 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 120px;
+  width: 100%;
   background: linear-gradient(90deg, #E6B980 0%, #EACDA3 100%);
   border: none;
   border-radius: 4px;
-  color:  #0B0B0B;
-  padding: 10px 16px;
+  padding: 4px 10px;
   cursor: pointer;
   outline: 0;
   min-height: 48px;
-  font-size: 1.25rem;
+  font-size: 20px;
+  line-height: 21px;
   font-weight: 700;
   box-sizing: border-box;
   -webkit-tap-highlight-color: transparent;
 
-  &:not(:disabled):hover {
-    &::after {
-      width: 100%;
-    }
+  & > span {
+    color: #0B0B0B;
   }
 
   &:disabled {
@@ -28,44 +26,6 @@
     opacity: 40%;
     box-shadow: none;
   }
-
-  & > span {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    z-index: 1;
-  }
-}
-
-.button::before {
-  content: "";
-  position: absolute;
-  top: 1px;
-  right: 1px;
-  bottom: 1px;
-  left: 1px;
-  background: linear-gradient(90deg, #E6B980 0%, #EACDA3 100%);
-  border-radius: 12px;
-}
-
-.button:after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 0;
-  height: 100%;
-  background: linear-gradient(90deg, #E6B980 0%, #EACDA3 100%);
-
-  transition: width 0.4s ease;
-  border-radius: 12px;
-  z-index: 0;
-}
-
-.button-large {
-  min-height: 46px;
 }
 
 .loadingButton {
