--- a/app/components/CardsShortPreview/CardsShortPreview.module.scss
+++ b/app/components/CardsShortPreview/CardsShortPreview.module.scss
@@ -1,13 +1,33 @@
 .cardsPreviewContainer {
-    display: flex;
+  display: flex;
 
-    justify-content: space-between;
+  justify-content: space-between;
 
-    max-width: 160px;
+  max-width: 160px;
 
-    img {
-        width: 48px;
-        height: 48px;
-        border-radius: 4px;
-    } 
+  img {
+    width: 48px;
+    height: 48px;
+    border-radius: 4px;
+  }
+}
+
+.cardPreviewImage {
+  &:not(:first-child) {
+    margin-left: -12px;
+    z-index: 4;
+  }
+}
+
+.moreInfo {
+  @extend .cardPreviewImage;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 48px;
+  height: 48px;
+  border-radius: 4px;
+  background-color: white;
+  border: 1px solid black;
 }
