--- a/app/components/LoadingScreen/LoadingScreen.module.scss
+++ b/app/components/LoadingScreen/LoadingScreen.module.scss
@@ -1,44 +1,87 @@
-@keyframes background-animation {
+$rotationDegree:70deg;
+$loaderColor: #E6B980;
+$loaderSpeed: 1s;
+
+@keyframes firstRing {
+  100% {
+    transform: rotateX($rotationDegree) rotateY(0deg) rotate(360deg)
+  }
+}
+
+@keyframes secondRing {
+  100% {
+    transform: rotateX($rotationDegree) rotateY(60deg) rotate(360deg)
+  }
+}
+
+@keyframes thirdRing {
+  100% {
+    transform: rotateX($rotationDegree) rotateY(-60deg) rotate(360deg)
+  }
+}
+
+@keyframes fadeInOut {
   0% {
-    background-position: 0 50%;
+    opacity: 0;
   }
 
   50% {
-    background-position: 100% 50%;
+    opacity: 1;
   }
 
   100% {
-    background-position: 0 50%;
+    opacity: 0;
   }
 }
 
-.overlay {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  overflow: auto;
-  padding: 32px;
-}
-
-.logoImage {
-  width: 390px;
-}
-
 .loader {
-  margin-top: 8px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 150px;
+  height: 150px;
+  transform: translate(-50%, -65%);
+  margin: 0;
 }
 
-.loadingTypography {
-  font-weight: bold;
-  background: linear-gradient(270deg, #FFFFFF, #6B8DD6, #2CD8D5);
-  background-size: 600%;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  animation: background-animation 3s ease infinite;
-  margin-top: -60px;
+.loaderElement {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+.loaderElement:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border-top: 25px solid $loaderColor;
+  border-right: 5px solid $loaderColor;
+  border-bottom: 10px solid transparent;
+  border-left: 0 solid transparent;
+  border-radius: 50%;
+}
+
+.loaderElement:nth-child(1):after {
+  animation: firstRing $loaderSpeed linear infinite;
+  transform: rotateX($rotationDegree) rotateY(0deg) rotate(0deg)
+}
+
+.loaderElement:nth-child(2):after {
+  animation: secondRing $loaderSpeed linear infinite;
+  animation-delay: ($loaderSpeed/-2);
+  transform: rotateX($rotationDegree) rotateY(60deg) rotate(0deg)
+}
+
+.loaderElement:nth-child(3):after {
+  animation: thirdRing $loaderSpeed linear infinite;
+  animation-delay: ($loaderSpeed/-3);
+  transform: rotateX($rotationDegree) rotateY(-60deg) rotate(0deg)
+}
+
+.loadingText {
+  margin-top: 160px;
+  animation: fadeInOut 3s ease-in-out infinite;
 }
