--- a/app/components/TournamentLeaderboard/TournamentWinners/TournamentWinner/TournamentWinner.module.scss
+++ b/app/components/TournamentLeaderboard/TournamentWinners/TournamentWinner/TournamentWinner.module.scss
@@ -1,75 +1,48 @@
-.winnerContainer {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+.winner {
+  position: relative;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
-.firstPlaceContainer {
-    position: relative;
-    top: -40px;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-}
-
-.participantAvatar {
-    width: 64px;
-    height: 64px;
-    border-radius: 50%;
+.winnerAvatar {
+  width: 64px;
+  height: 64px;
+  margin-bottom: 8px;
 }
 
 .reward {
-    border-radius: 15px;
-    padding: 5px;
-    background: linear-gradient(111.04deg, #2CD8D5 0%, #6B8DD6 47.26%, #8E37D7 98.45%);
-    display: flex;
+  border-radius: 4px;
+  padding: 4px 15.5px;
+  background: linear-gradient(90deg, #E6B980 0%, #EACDA3 100%);
+  margin-top: 4px;
 }
 
 .rewardNumber {
-    padding-top: 4px;
+  padding-top: 4px;
 }
 
 .tokenImg {
-    width: 30px;
-    height: 30px;
+  width: 30px;
+  height: 30px;
 }
 
 .zeroCircle {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(111.04deg, rgba(161, 236, 223, 0.05) 0%, rgba(157, 188, 255, 0.05) 47.26%, rgba(204, 143, 255, 0.05) 98.45%);
-    border-radius: 50%;
-    width: 110px;
-    height: 110px;
-}
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 114px;
+  height: 78px;
+  background: linear-gradient(218.74deg, rgba(247, 214, 163, 0.4) 0%, rgba(51, 31, 0, 0.4) 77.74%);
 
-.firstCircle {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(111.04deg, rgba(161, 236, 223, 0.1) 0%, rgba(157, 188, 255, 0.1) 47.26%, rgba(204, 143, 255, 0.1) 98.45%);
-    border-radius: 50%;
-    width: 90px;
-    height: 90px;
-}
-
-.secondCircle {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(111.04deg, rgba(161, 236, 223, 0.2) 0%, rgba(157, 188, 255, 0.2) 47.26%, rgba(204, 143, 255, 0.2) 98.45%);
-    border-radius: 50%;
-    width: 70px;
-    height: 70px;
-}
-
-.thirdCircle {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(111.04deg, rgba(161, 236, 223, 0.3) 0%, rgba(157, 188, 255, 0.3) 47.26%, rgba(204, 143, 255, 0.3) 98.45%);
-    border-radius: 50%;
-    width: 46px;
-    height: 46px;
+  &::before {
+    content: '';
+    position: absolute;
+    top: -24px;
+    width: 114px;
+    height: 24px;
+    background: linear-gradient(263.3deg, rgba(247, 214, 163, 0.4) 10.51%, rgba(51, 31, 0, 0.4) 79.42%);
+    transform: rotateX(45deg) rotateZ(45deg);
+  }
 }
