--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -21,7 +21,7 @@ img, picture, video, canvas, svg {
 
 body {
   overflow-x: hidden;
-  font-family: 'Orbitron', sans-serif;
+  font-family: 'SF Pro Display', sans-serif;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
@@ -31,7 +31,7 @@ p, h1, h2, h3, h4, h5, h6 {
 }
 
 button {
-  font-family: 'Orbitron', sans-serif;
+  font-family: 'SF Pro Display', sans-serif;
 }
 
 #root {
