--- a/app/components/LoadingScreen/LoadingScreen.module.scss
+++ b/app/components/LoadingScreen/LoadingScreen.module.scss
@@ -4,24 +4,6 @@ $rotationDegree:70deg;
 $loaderColor: #E6B980;
 $loaderSpeed: 1s;
 
-@keyframes firstRing {
-  100% {
-    transform: rotateX($rotationDegree) rotateY(0deg) rotate(360deg)
-  }
-}
-
-@keyframes secondRing {
-  100% {
-    transform: rotateX($rotationDegree) rotateY(60deg) rotate(360deg)
-  }
-}
-
-@keyframes thirdRing {
-  100% {
-    transform: rotateX($rotationDegree) rotateY(-60deg) rotate(360deg)
-  }
-}
-
 @keyframes fadeInOut {
   0% {
     opacity: 0;
@@ -36,54 +18,23 @@ $loaderSpeed: 1s;
   }
 }
 
-.loader {
+.logo {
   position: absolute;
-  left: 50%;
-  top: 50%;
-  width: 150px;
-  height: 150px;
-  transform: translate(-50%, -65%);
-  margin: 0;
-}
-
-.loaderElement {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-}
-
-.loaderElement:after {
-  content: "";
-  position: absolute;
-  left: 0;
   top: 0;
+  right: 0;
+  left: 0;
   width: 100%;
-  height: 100%;
-  border-top: 25px solid $loaderColor;
-  border-right: 5px solid $loaderColor;
-  border-bottom: 10px solid transparent;
-  border-left: 0 solid transparent;
-  border-radius: 50%;
 }
 
-.loaderElement:nth-child(1):after {
-  animation: firstRing $loaderSpeed linear infinite;
-  transform: rotateX($rotationDegree) rotateY(0deg) rotate(0deg)
-}
-
-.loaderElement:nth-child(2):after {
-  animation: secondRing $loaderSpeed linear infinite;
-  animation-delay: math.div($loaderSpeed, -2);
-  transform: rotateX($rotationDegree) rotateY(60deg) rotate(0deg)
-}
-
-.loaderElement:nth-child(3):after {
-  animation: thirdRing $loaderSpeed linear infinite;
-  animation-delay: math.div($loaderSpeed, -3);
-  transform: rotateX($rotationDegree) rotateY(-60deg) rotate(0deg)
+.loadingContainer {
+  display: flex;
+  flex-direction: column;
+  margin-top: 140px;
+  row-gap: 16px;
+  width: 100%;
+  background: #0B0B0B;
 }
 
 .loadingText {
-  margin-top: 160px;
   animation: fadeInOut 3s ease-in-out infinite;
 }
